tests/snapshots/region_freeze_value_write.snap
---
source: tests/fault_snapshots.rs
---
program: region_freeze_value_write.lu
trap:    region-fault
clause:  [mem.region.freeze.1]
rule:    RegionFreeze
message: region #1 is frozen: `imm` data is immutable forever
at:      13:5 `cfg.limit = 7`
because: (single-span fault)
